# social_network

./: README.md  app.py  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  pyproject.toml  requirements.txt
src/api/: aplication.py  configuration.py
src/api/exceptions/: user_error.py
src/api/object/: users.py
src/api/routes/: users.py
src/datalayer/: dbconfig.py
src/datalayer/models/: user.py
