[tool.poetry]
name = "social_network"
version = "0.1.0"
description = ""
authors = ["Alexandre Ventura <alexandreventura630@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
taskipy = "^1.14.0"

[tool.taskipy.tasks]
dev = "fastapi dev src/api/aplication.py"
prod = "uvicorn src.api.aplication:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
